style: fix spacing of the project boxes - (Issue #17)

--- a/src/App.css
+++ b/src/App.css
@@ -92,7 +92,7 @@ section{
     text-align: justify;
 }
 #experience{
-    background-color: #e8bebe72;
+    background-color: #e8bebe63;
     font-size:x-large;
     text-align: center;
 }
@@ -142,8 +142,8 @@ section{
 .project-container{
     display:flex;
     flex-wrap: wrap;
-    justify-content:space-between;
-    gap: 20px;
+    justify-content:center;
+    gap: 30px;
     padding:20px 80px;
 }
 .project-box{
